trunk/Archive2/3a/e525122312c96c/output
main.cpp: In function 'int main()':
main.cpp:6:11: error: 'hello' was not declared in this scope
     hello();
           ^
